fdo#32598: Changing media playback options sets modified flag