sd/source/ui/view/MediaObjectBar.cxx
@@ -154,6 +154,10 @@ void MediaObjectBar::Execute( SfxRequest& rReq )
                 {
                     static_cast< sdr::contact::ViewContactOfSdrMediaObj& >( pObj->GetViewContact() ).executeMediaItem(
                         static_cast< const ::avmedia::MediaItem& >( *pItem ) );
+
+                    //fdo #32598: after changing playback opts, set document's modified flag
+                    SdDrawDocument& rDoc = mpView->GetDoc();
+                    rDoc.SetChanged(sal_True);
                 }
             }
 
